@@ -1,9 +1,5 @@
 package tech.bugger.business.service;
 
-import java.time.ZonedDateTime;
-import java.util.Arrays;
-import java.util.List;
-import javax.enterprise.event.Event;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,7 +15,6 @@ import tech.bugger.global.transfer.Report;
 import tech.bugger.global.transfer.Selection;
 import tech.bugger.global.transfer.Topic;
 import tech.bugger.global.transfer.User;
-import tech.bugger.global.util.Lazy;
 import tech.bugger.persistence.exception.NotFoundException;
 import tech.bugger.persistence.exception.SelfReferenceException;
 import tech.bugger.persistence.exception.TransactionException;
@@ -29,10 +24,21 @@ import tech.bugger.persistence.gateway.SubscriptionGateway;
 import tech.bugger.persistence.util.Transaction;
 import tech.bugger.persistence.util.TransactionManager;
 
+import javax.enterprise.event.Event;
+import java.time.OffsetDateTime;
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(LogExtension.class)
 @ExtendWith(MockitoExtension.class)
@@ -78,13 +84,13 @@ public class ReportServiceTest {
     public void setUp() {
         service = new ReportService(notificationService, topicService, postService, profileService, transactionManager,
                 feedbackEvent, ResourceBundleMocker.mock(""));
-        List<Attachment> attachments = Arrays.asList(new Attachment(), new Attachment(), new Attachment());
-        testFirstPost = new Post(100, "Some content", new Lazy<>(mock(Report.class)), mock(Authorship.class), attachments);
+        List<Attachment> attachments = List.of(new Attachment(), new Attachment(), new Attachment());
+        testFirstPost = new Post(100, "Some content", 42, mock(Authorship.class), attachments);
         User testUser = new User();
         testUser.setId(1);
-        Authorship authorship = new Authorship(testUser, ZonedDateTime.now(), testUser, ZonedDateTime.now());
+        Authorship authorship = new Authorship(testUser, OffsetDateTime.now(), testUser, OffsetDateTime.now());
         testReport = new Report(200, "Some title", Report.Type.BUG, Report.Severity.RELEVANT, "", authorship,
-                mock(ZonedDateTime.class), null, null, false, 1);
+                mock(OffsetDateTime.class), null, null, false, 1);
 
         lenient().doReturn(tx).when(transactionManager).begin();
         lenient().doReturn(reportGateway).when(tx).newReportGateway();
