@@ -18,33 +18,25 @@ import tech.bugger.global.transfer.Post;
 import tech.bugger.global.transfer.Report;
 import tech.bugger.global.transfer.Topic;
 import tech.bugger.global.transfer.User;
-import tech.bugger.global.util.Lazy;
 
 import javax.enterprise.event.Event;
 import javax.faces.context.ExternalContext;
 import javax.servlet.http.Part;
 import java.io.InputStream;
-import java.time.ZonedDateTime;
-import java.util.Arrays;
+import java.time.OffsetDateTime;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.doThrow;
 
 @ExtendWith(MockitoExtension.class)
 public class ReportCreateBackerTest {
@@ -89,12 +81,13 @@ public class ReportCreateBackerTest {
     @BeforeEach
     public void setUp() throws Exception {
         reportCreateBacker = new ReportCreateBacker(applicationSettings, topicService, reportService, postService,
-                session, ectx, feedbackEvent);
+                                                    session, ectx, feedbackEvent);
 
-        List<Attachment> attachments = Arrays.asList(new Attachment(), new Attachment(), new Attachment());
-        testFirstPost = new Post(100, "Some content", new Lazy<>(mock(Report.class)), mock(Authorship.class), attachments);
-        testReport = new Report(100, "Some title", Report.Type.BUG, Report.Severity.RELEVANT, "", mock(Authorship.class),
-                mock(ZonedDateTime.class), null, null, false, 1);
+        List<Attachment> attachments = List.of(new Attachment(), new Attachment(), new Attachment());
+        testFirstPost = new Post(100, "Some content", 42, mock(Authorship.class), attachments);
+        testReport = new Report(100, "Some title", Report.Type.BUG, Report.Severity.RELEVANT, "",
+                                mock(Authorship.class),
+                                mock(OffsetDateTime.class), null, null, false, 1);
         reportCreateBacker.setReport(testReport);
         reportCreateBacker.setFirstPost(testFirstPost);
         lenient().doReturn(requestParameterMap).when(ectx).getRequestParameterMap();
@@ -117,7 +110,7 @@ public class ReportCreateBackerTest {
         doReturn(true).when(topicService).canCreateReportIn(any(), any());
         reportCreateBacker.init();
         assertEquals(1234, reportCreateBacker.getReport().getTopicID());
-        assertEquals(reportCreateBacker.getReport(), reportCreateBacker.getFirstPost().getReport().get());
+        assertEquals(reportCreateBacker.getReport().getId(), reportCreateBacker.getFirstPost().getReport());
     }
 
     @Test
@@ -188,7 +181,7 @@ public class ReportCreateBackerTest {
 
     @Test
     public void testDeleteAllAttachments() {
-        reportCreateBacker.setAttachments(new LinkedList<>(Arrays.asList(new Attachment(), new Attachment())));
+        reportCreateBacker.setAttachments(new LinkedList<>(List.of(new Attachment(), new Attachment())));
         reportCreateBacker.deleteAllAttachments();
         assertEquals(0, reportCreateBacker.getAttachments().size());
     }
